Fix IPropertyBag::Read implementation to treat pVar as [in,out] and honour callers requested VARTYPE. b=193782 r=dbradley@netscape.com sr=blizzard@mozilla.org a=asa@mozilla.org